ajout de l'autoload via composer

--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,22 @@
 {
-    "name": "nduflot/2024-07-08-php-avance",
-    "description": "Projet de travail formation php avancé",
-    "type": "project",
-    "authors": [
-        {
-            "name": "Nicolas Duflot"
-        }
-    ],
-    "minimum-stability": "stable",
-    "require": {
-        "twbs/bootstrap": "^5.3"
+  "name": "nduflot/2024-07-08-php-avance",
+  "description": "Projet de travail formation php avancé",
+  "type": "project",
+  "authors": [
+    {
+      "name": "Nicolas Duflot"
     }
+  ],
+  "minimum-stability": "stable",
+  "require": {
+    "twbs/bootstrap": "^5.3",
+    "doctrine/collections": "^2.2"
+  },
+  "autoload": {
+    "psr-4": {
+      "App\\": "src/Classes",
+      "Utils\\": "src/Classes",
+      "Wargame\\": "src/Classes/Wargame"
+    }
+  }
 }
