--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
   "minimum-stability": "stable",
   "require": {
     "twbs/bootstrap": "^5.3",
-    "doctrine/collections": "^2.2"
+    "doctrine/collections": "^2.2",
+    "php-kit/ext-pdo": "^1.1"
   },
   "autoload": {
     "psr-4": {
